--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,9 +2,9 @@ defaults:
   - _self_
   - database@_global_: island_small
   - evolution@_global_: small_budget
-  - task@_global_: circle_packing
+  - task@_global_: linear_codes
   - cluster@_global_: local
-  - variant@_global_: circle_packing_example
+  - variant@_global_: linear_codes_example
 
 verbose: false
 results_dir: results
