--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "google-generativeai",
     "galois>=0.4.9",
     "vllm>=0.13.0",
+    "psutil>=7.2.0",
 ]
 
 [tool.setuptools]
