--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ dependencies = [
     "aiofiles",
     "google-generativeai",
     "galois>=0.4.9",
+    "vllm>=0.13.0",
+    "psutil>=7.2.0",
 ]
 
 [tool.setuptools]
