--- a/configs/evolution/small_budget.yaml
+++ b/configs/evolution/small_budget.yaml
@@ -9,6 +9,7 @@ evo_config:
   num_generations: 20
   max_parallel_jobs: 1
   max_patch_attempts: 10
+  num_branches_per_generation: 3
   llm_models:
     - "gpt-4.1"
   llm_dynamic_selection: null
