--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "galois>=0.4.9",
     "vllm>=0.13.0",
     "psutil>=7.2.0",
+    "aiolimiter>=1.2.1",
 ]
 
 [tool.setuptools]
